solving date alignment bug in events listing pages

--- a/themes/connectmasstapp/css/styles.css
+++ b/themes/connectmasstapp/css/styles.css
@@ -758,6 +758,11 @@ body.events #sidebar {
   padding: 15px 15px 15px 15px;
 }
 
+/* line 353, ../sass/main_pages/_event.scss */
+.view-dashboard .event-instances .views-field-title, .view-dashboard .event-instances .views-field-field-date-1 {
+  padding-left: 48px;
+}
+
 /*admin & profile*/
 /* line 6, ../sass/main_pages/_register.scss */
 body.page-user-register input, body.page-user-register select, body.page-user-register fieldset, body.page-user-register .form-select, body.page-anon-register input, body.page-anon-register select, body.page-anon-register fieldset, body.page-anon-register .form-select, body.page-admin-people-create input, body.page-admin-people-create select, body.page-admin-people-create fieldset, body.page-admin-people-create .form-select {
