--- a/themes/connectmasstapp/sass/main_pages/_event.scss
+++ b/themes/connectmasstapp/sass/main_pages/_event.scss
@@ -348,3 +348,10 @@ body.events {
     padding: 15px 15px 15px 15px;
   }
 }
+.view-dashboard {
+  .event-instances {
+    .views-field-title, .views-field-field-date-1 {
+      padding-left: 48px;
+    }
+  }
+}
